k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-app
  labels:
    app: k8s-node-app
